Included most strings in the application in the strings.xml file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
     <string name="app_name">Social Care Application</string>
-    <string name="empty"></string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="log_in">Log In</string>
+    <string name="information">For more information click here</string>
+    <string name="time_visit">Time Visit:</string>
+    <string name="to"> to </string>
+    <string name="vulnerability">Vulnerability Level:</string>
+    <string name="address">Address:</string>
+    <string name="empty">""</string>
+    <string name="general_information">General Information:</string>
+    <string name="keysafe">Key Safe Code:</string>
+    <string name="maps">Look in Maps</string>
+    <string name="report">Report</string>
+    <string name="github">"https://github.com/dannymonroy"</string>
 </resources>
